tests/mm0_mmu/fail/bad-sort4312.mm0
-- bad modifier order
free provable pure strict sort s4312;